--- a/phoneguard/Info.plist
+++ b/phoneguard/Info.plist
@@ -22,10 +22,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>为避免警报铃声音量太低听不到，App需要访问您的麦克风，是否允许？</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>经纬度信息或速度信息需要访问您的位置信息，是否允许？</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>为避免警报铃声音量太低听不到，App需要访问您的麦克风，是否允许？</string>
+	<key>NSMotionUsageDescription</key>
+	<string>为实现手机摇一摇开启警戒，是否允许APP访问手机移动轨迹或运动轨迹？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
-		<string>fetch</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -39,10 +46,6 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>为避免警报铃声音量太低听不到，App需要访问您的麦克风，是否允许？</string>
-	<key>NSMotionUsageDescription</key>
-	<string>为实现手机摇一摇开启警戒，是否允许APP访问手机移动轨迹或运动轨迹？</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
