--- a/phoneguard/Info.plist
+++ b/phoneguard/Info.plist
@@ -27,12 +27,13 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>经纬度信息或速度信息需要访问您的位置信息，是否允许？</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>为避免警报铃声音量太低听不到，App需要访问您的麦克风，是否允许？</string>
+	<string>为避免按下Home键无法触发警报铃声或者铃声音量太低，App需要在后台访问您的麦克风，是否允许？</string>
 	<key>NSMotionUsageDescription</key>
 	<string>为实现手机摇一摇开启警戒，是否允许APP访问手机移动轨迹或运动轨迹？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>为避免按下Home键无法触发警报铃声，App需要在后台访问您的麦克风，是否允许？</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
