--- a/phoneguard/Info.plist
+++ b/phoneguard/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>手机安防</string>
+	<string>手机防盗专家</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,23 +17,20 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.2</string>
+	<string>1.0.4</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>为避免警报铃声音量太低听不到，App需要访问您的麦克风，是否允许？</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>经纬度信息或速度信息需要访问您的位置信息，是否允许？</string>
+	<string>经纬度,速度或海拔信息需要访问您的位置，是否允许？</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>为避免按下Home键无法触发警报铃声或者铃声音量太低，App需要在后台访问您的麦克风，是否允许？</string>
+	<string>分贝仪需要访问您的麦克风，是否允许？</string>
 	<key>NSMotionUsageDescription</key>
 	<string>为实现手机摇一摇开启警戒，是否允许APP访问手机移动轨迹或运动轨迹？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
-		<string>为避免按下Home键无法触发警报铃声，App需要在后台访问您的麦克风，是否允许？</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
